# wasserstein-critic-deconfounding

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  README.md  README.rst  conda-lock.yml  environment.yaml  pyproject.toml
.devcontainer/: devcontainer.gpu.json  devcontainer.json  devcontainer_template.json  postCreateCommand.sh
.github/workflows/: deploy.yml  test.yml
doc/source/: conf.py  index.rst
notebooks/: VAE.ipynb  eval.ipynb  experiments.ipynb  explore_data.ipynb  figures.ipynb  results.ipynb  results_2.ipynb  results_figures.ipynb
notebooks/scCRAFT_reproducible/: Scale_vae.ipynb  benchmarking_Lung_altas copy.ipynb  benchmarking_Lung_altas.ipynb  benchmarking_Pancrease.ipynb  binary-wass_loss.ipynb  binary_balanced_nested_cv_results.csv  binary_balanced_outer_fold_results.pkl  binary_unbalanced_nested_cv_results.csv  binary_unbalanced_outer_fold_results.pkl  cv_statistical_comparison.csv  cv_statistical_comparison.tex  cv_summary_detailed.csv  cv_summary_formatted.csv  gen_ai_project.ipynb  multi-wass_loss.ipynb  multi-wass_loss_ablation.ipynb  multi-wass_loss_data_ablation.ipynb  multi-wass_loss_sample_normalization.ipynb  multi_balanced_nested_cv_results.csv  multi_balanced_outer_fold_results.pkl  nested_cv_results.csv  outer_fold_results.pkl
scripts/: batch_size_experiment.sh  binary_experiments.sh  hyperparameter_search.py  multibatch_experiments.sh  reference_experiments.sh  train.py  train_scCraft.py  train_vae.py  train_vae_c.py  train_vae_d.py  train_vae_mmd.py  train_vae_uot.py
src/wcd_vae/: data.py  hyperparameter.py  loss.py  metrics.py  model.py  plot.py
src/wcd_vae/scCRAFT/: model.py  networks.py  utils.py
tests/wcd_vae/: test_metrics.py
